dist/1.0/bin/sample/retrieveUnpackaged/objects/COrder__c.object
<CustomObject>
    <fields>
        <fullName>Related_Order__c</fullName>
        <description>Points to related Order, available for Requests and IS functionality</description>
        <inlineHelpText>Points to related Order, available for Requests and IS functionality</inlineHelpText>
        <label>Related Order</label>
        <referenceTo>COrder__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remind_days__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Specifies, how many days before due date the reminder should be sent</description>
        <inlineHelpText>Specifies, how many days before due date the reminder should be sent</inlineHelpText>
        <label>Remind days before</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked an automatic reminder will generate before due date when Order is not finished</description>
        <inlineHelpText>If checked an automatic reminder will generate before due date when Order is not finished</inlineHelpText>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reminder_date__c</fullName>
        <description>Points the date when reminder should be send</description>
        <formula>DueDate__c - Remind_days__c - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Points the date when reminder should be send</inlineHelpText>
        <label>Reminder date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Disconnection_Date__c</fullName>
        <description>Specifies the date of disconnection. Actual one - if it is set, if not then Planned. Used for reporting purposes.</description>
        <formula>IF( ISNULL( ActualDisconnection__c ),  PlannedDisconnection__c , ActualDisconnection__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Specifies the date of disconnection. Actual one - if it is set, if not then Planned. Used for reporting purposes.</inlineHelpText>
        <label>Reporting Disconnection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Installation_Date__c</fullName>
        <description>Specifies the installation date. Actual one - if it is set, if not then Planned. Used for reporting purposes.</description>
        <formula>IF( ISNULL( Actual_Installation_Date__c ) ,  Planned_Installation_Date__c , Actual_Installation_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Specifies the installation date. Actual one - if it is set, if not then Planned. Used for reporting purposes.</inlineHelpText>
        <label>Reporting Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>Relation to Request object</description>
        <inlineHelpText>Relation to Request object</inlineHelpText>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPL_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPL approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <description>Specifies the Retail or Wholesale type of sales. Used for reporting purposes.</description>
        <inlineHelpText>Specifies the Retail or Wholesale type of sales. Used for reporting purposes.</inlineHelpText>
        <label>Sales Type</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sent_Escalation__c</fullName>
        <description>Points escalation level which should be used during next iteration.</description>
        <inlineHelpText>Technical field</inlineHelpText>
        <label>Sent Escalation</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ServiceBundle__c</fullName>
        <description>Relation to Service Bundle object</description>
        <inlineHelpText>Selected Service Bundle</inlineHelpText>
        <label>Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceComponent__c</fullName>
        <description>Relation to Service Component object</description>
        <inlineHelpText>Selected Service Component</inlineHelpText>
        <label>Service Component</label>
        <referenceTo>ServiceComponent__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_CID__c</fullName>
        <description>Circuit ID from related Installed Service</description>
        <inlineHelpText>Circuit ID from related Installed Service</inlineHelpText>
        <label>Service CID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Simplified_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the order has been created from Simplified Order mechanism. Used in provisioning process.</description>
        <inlineHelpText>Specifies whether the order has been created from Simplified Order mechanism.</inlineHelpText>
        <label>Simplified Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Account_ID__c</fullName>
        <description>Source Customer ID required in case of Cession for attachment of Cession document to both customers.</description>
        <label>Source Account ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Name__c</fullName>
        <description>Name of the Source Customer (Source Account) from which the service is transferd to Target Customer (Account)</description>
        <inlineHelpText>Name of the Source Customer (Source Account) from which the service is transferd to Target Customer (Account)</inlineHelpText>
        <label>Source Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account__c</fullName>
        <description>Source Customer Name</description>
        <formula>HYPERLINK (Source_Account_ID__c, Source_Account_Name__c )</formula>
        <inlineHelpText>Source Customer Name - from which service is being transferd</inlineHelpText>
        <label>Source Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Order Stage</description>
        <inlineHelpText>Order Stage</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning &amp; Billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Billing_Customer__c</fullName>
        <description>The date from which customer ishould be billed for service. To be set in Billing system</description>
        <inlineHelpText>The date from which customer ishould be billed for service. To be set in Billing system</inlineHelpText>
        <label>Start Billing Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of Order</description>
        <inlineHelpText>Status of Order</inlineHelpText>
        <label>Order Status</label>
        <picklist>
            <controllingField>OrderType__c</controllingField>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary Quotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm Quotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected Deposit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Contact__c</fullName>
        <description>Person which needs to be contacted in case of any technical issues</description>
        <inlineHelpText>Person which needs to be contacted in case of any technical issues</inlineHelpText>
        <label>Technical Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Technical Contact)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temp_New_Billing_Account__c</fullName>
        <label>Temp_New_Billing_Account</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <description>Date until the Proposal Cost is valid.</description>
        <inlineHelpText>Date until the Proposal Cost is valid.</inlineHelpText>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XML_Comments__c</fullName>
        <description>Comments in XML</description>
        <inlineHelpText>Technical field</inlineHelpText>
        <label>XML Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>flgComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Address Complete</description>
        <label>Address Complete</label>
        <type>Checkbox</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OrderType__c</columns>
        <columns>Status__c</columns>
        <columns>DueDate__c</columns>
        <columns>Request__c</columns>
        <columns>Stage__c</columns>
        <columns>ProvisioningStatus__c</columns>
        <columns>BillingStatus__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Awaiting_Costing</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>IS_Task__c</columns>
        <columns>Request__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>COrder__c.DomesticOrder</value>
        </filters>
        <filters>
            <field>OrderType__c</field>
            <operation>equals</operation>
            <value>Quotation</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Awaiting Costing</label>
    </listViews>
    <listViews>
        <fullName>Awaiting_Provisioning</fullName>
        <columns>NAME</columns>
        <columns>OrderType__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>DueDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Provisioning</value>
        </filters>
        <filters>
            <field>Assigned_Project_Manager__c</field>
            <operation>equals</operation>
        </filters>
        <label>Awaiting Provisioning</label>
    </listViews>
    <listViews>
        <fullName>CZ_Awaiting_Provisioning</fullName>
        <columns>NAME</columns>
        <columns>OrderType__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>DueDate__c</columns>
        <columns>Head_Project_Manager__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Provisioning</value>
        </filters>
        <filters>
            <field>Assigned_Project_Manager__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>GTS_Location__c</field>
            <operation>contains</operation>
            <value>Czech</value>
        </filters>
        <label>CZ Awaiting Provisioning</label>
    </listViews>
    <listViews>
        <fullName>CZ_Order_Entry</fullName>
        <columns>NAME</columns>
        <columns>OrderType__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>DueDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Order Entry</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected Provisioning</value>
        </filters>
        <filters>
            <field>GTS_Location__c</field>
            <operation>contains</operation>
            <value>Czech</value>
        </filters>
        <label>CZ Order Entry</label>
    </listViews>
    <listViews>
        <fullName>Frontoffice_SK_new_order</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Renata Binderova,Miriam Odelgova,Nela Ličková</value>
        </filters>
        <label>Frontoffice SK new order</label>
        <sharedTo>
            <rolesAndSubordinates>Front Office Manager SK</rolesAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HU_Awaiting_Provisioning</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>OrderType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ProvisioningEntryDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Provisioning</value>
        </filters>
        <filters>
            <field>Assigned_Project_Manager__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>GTS_Location__c</field>
            <operation>contains</operation>
            <value>Hungary</value>
        </filters>
        <label>HU Awaiting Provisioning</label>
    </listViews>
    <listViews>
        <fullName>HU_Order_Entry</fullName>
        <booleanFilter>3 and (1 or 2)</booleanFilter>
        <columns>NAME</columns>
        <columns>OrderType__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>DueDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OrderCloseDate__c</columns>
        <columns>ProvisioningAcceptDate__c</columns>
        <columns>ProvisioningEntryDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Order Entry</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected Provisioning</value>
        </filters>
        <filters>
            <field>GTS_Location__c</field>
            <operation>contains</operation>
            <value>Hungary</value>
        </filters>
        <label>HU Order Entry</label>
    </listViews>
    <listViews>
        <fullName>HU_completed</fullName>
        <columns>NAME</columns>
        <columns>OrderType__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GTS_Location__c</field>
            <operation>equals</operation>
            <value>GTS Hungary</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>OrderType__c</field>
            <operation>equals</operation>
            <value>New Service</value>
        </filters>
        <label>HU completed_NS</label>
    </listViews>
    <listViews>
        <fullName>My_Awaiting_Orders</fullName>
        <columns>NAME</columns>
        <columns>OrderType__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>DueDate__c</columns>
        <columns>Assigned_Project_Manager__c</columns>
        <columns>Head_Project_Manager__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Provisioning</value>
        </filters>
        <label>My Awaiting Orders</label>
    </listViews>
    <listViews>
        <fullName>My_In_Progress_Orders</fullName>
        <columns>NAME</columns>
        <columns>OrderType__c</columns>
        <columns>DueDate__c</columns>
        <columns>Stage__c</columns>
        <columns>Request__c</columns>
        <columns>ProvisioningStatus__c</columns>
        <columns>BillingStatus__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>My In Progress Orders</label>
    </listViews>
    <listViews>
        <fullName>My_New_Orders</fullName>
        <columns>NAME</columns>
        <columns>OrderType__c</columns>
        <columns>DueDate__c</columns>
        <columns>Request__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>My New Orders</label>
    </listViews>
    <listViews>
        <fullName>My_On_Hold_Orders</fullName>
        <columns>NAME</columns>
        <columns>OrderType__c</columns>
        <columns>DueDate__c</columns>
        <columns>OnHoldReason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Hold</value>
        </filters>
        <label>My On Hold Orders</label>
    </listViews>
    <listViews>
        <fullName>Orders_International</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>OrderType__c</columns>
        <columns>Status__c</columns>
        <columns>DueDate__c</columns>
        <columns>CustomerExpectedDelivery__c</columns>
        <columns>Request__c</columns>
        <columns>Stage__c</columns>
        <columns>ProvisioningStatus__c</columns>
        <filterScope>Queue</filterScope>
        <label>Orders Wholesale International</label>
        <queue>Orders Wholesale International</queue>
    </listViews>
    <listViews>
        <fullName>PL_Awaiting_Provisioning</fullName>
        <columns>NAME</columns>
        <columns>OrderType__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>DueDate__c</columns>
        <columns>Head_Project_Manager__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Provisioning</value>
        </filters>
        <filters>
            <field>Assigned_Project_Manager__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>GTS_Location__c</field>
            <operation>contains</operation>
            <value>Poland</value>
        </filters>
        <label>PL Awaiting Provisioning</label>
    </listViews>
    <nameField>
        <displayFormat>ORD{000000000}</displayFormat>
        <label>Order No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <recordTypes>
        <fullName>DomesticOrder</fullName>
        <active>true</active>
        <description>Record Type for Domestic Orders</description>
        <label>Domestic Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>NewInstallation</fullName>
        <active>true</active>
        <description>Installation of completely new Service</description>
        <label>New Installation</label>
    </recordTypes>
    <recordTypes>
        <fullName>ServiceOrder</fullName>
        <active>true</active>
        <description>Modification of existing Service</description>
        <label>Service Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BAblocker</fullName>
        <active>false</active>
        <description>https://helpdeskce.in.gtsce.com/browse/CECOL-401</description>
        <errorConditionFormula>IF(AND(OR(ISPICKVAL(OrderType__c, &quot;Service Management&quot;), 
ISPICKVAL(OrderType__c, &quot;Renewal&quot;)), OR(NOT(ISBLANK( Billing_Account__c)), NOT(ISBLANK( Billing_Account_Name__c)))) , true , false)</errorConditionFormula>
        <errorMessage>For Order Types RENEWAL and SERVICE MANAGEMENT it is not possible to select Billing Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BankNameWithAccountNumber</fullName>
        <active>true</active>
        <description>Check, if Bank name has been selected then the Bank account number also has to be filled in</description>
        <errorConditionFormula>AND(OR (AND(NOT (ISBLANK(Bank_Account_Number__c)), ISBLANK(Bank_Name__c)),AND ((ISBLANK(Bank_Account_Number__c)), NOT (ISBLANK(Bank_Name__c)))),  $RecordType.Name = &apos;Domestic Order&apos;)</errorConditionFormula>
        <errorDisplayField>Bank_Name__c</errorDisplayField>
        <errorMessage>If you select a Bank name you have to enter Bank Account Number. If you enter Bank Account Number you also have to choose Bank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BillingAccountVSAccount</fullName>
        <active>true</active>
        <description>Verifies if selected BA belongs to correct Customer</description>
        <errorConditionFormula>AND(Billing_Account__c != null,  Billing_Account__r.Account__c !=  Account__c )</errorConditionFormula>
        <errorDisplayField>Billing_Account__c</errorDisplayField>
        <errorMessage>Selected Billing Account belongs to different Customer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CalculationChange</fullName>
        <active>true</active>
        <description>[PROV_STR] PROV_PL_304 CBCT</description>
        <errorConditionFormula>IF(
AND(ISCHANGED( Calculation_Number__c),
NOT(ISPICKVAL( Status__c , &apos;New&apos;)),
NOT(ISPICKVAL( Status__c , &apos;Rejected&apos;)),
NOT(ISPICKVAL( Status__c , &apos;Order Entry&apos;)),
NOT(ISPICKVAL( Status__c , &apos;Rejected Provisioning&apos;)))
,true, false)</errorConditionFormula>
        <errorMessage>You can not modify Calculation, when Order is in Provisioning.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cancellation_date_removal</fullName>
        <active>true</active>
        <description>Cancelation Date can be changed but not removed</description>
        <errorConditionFormula>ISNULL(PRIORVALUE(Cancellation_Date__c)) = false &amp;&amp; ISNULL(Cancellation_Date__c) = true &amp;&amp; (ISPICKVAL( Status__c , &apos;In Cancellation&apos;) || ISPICKVAL( Status__c , &apos;Cancelled&apos;))</errorConditionFormula>
        <errorDisplayField>Cancellation_Date__c</errorDisplayField>
        <errorMessage>Cancelation Date can be changed but not removed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_Billing_Date_required_on_Close</fullName>
        <active>true</active>
        <description>Checks if Billing Date has been entered before closing</description>
        <errorConditionFormula>AND(ISPICKVAL( Status__c , &apos;Completed&apos;), ISNULL( Change_Billing_Customer__c ), $RecordType.Name = &apos;Service Order&apos;)</errorConditionFormula>
        <errorDisplayField>Change_Billing_Customer__c</errorDisplayField>
        <errorMessage>Change Billing Customer Date is required when closing Order</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckBankAccountForPaymentMethod</fullName>
        <active>true</active>
        <description>If as a Payement method Direct debit has been selected then Bank name, Bank account number and limit can not be empty</description>
        <errorConditionFormula>AND(PaymentMethod__r.Name = &apos;Direct Debit&apos; ,OR( ISNULL(Bank_Name__c) , ISNULL(Bank_Account_Number__c), ISNULL( Limit__c )),  $RecordType.Name = &apos;Domestic Order&apos;)</errorConditionFormula>
        <errorDisplayField>PaymentMethod__c</errorDisplayField>
        <errorMessage>If as a Payement method Direct debit has been selected then Bank name, Bank account number and limit can not be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_Address_required_for_Delivery_Type</fullName>
        <active>true</active>
        <description>Email address must be given if Invoice Delivery EMAIL selected</description>
        <errorConditionFormula>AND(OR( InvoiceDelivery__r.Value__c = &apos;EMAIL&apos;, InvoiceDelivery__r.Value__c = &apos;BOTH&apos;), ISBLANK( Invoice_Email__c ),  $RecordType.Name = &apos;Domestic Order&apos;)</errorConditionFormula>
        <errorDisplayField>Invoice_Email__c</errorDisplayField>
        <errorMessage>Please, provide email address for invoice delivery</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HU_BillingFrom_Validation</fullName>
        <active>true</active>
        <description>Billing From Value on Existing BA and Order should be the same</description>
        <errorConditionFormula>AND( 
TEXT(Billing_Account__r.Billed_From__c) != TEXT(Billed_From__c), 
NOT(ISBLANK( Billing_Account__c )), 
GTS_Location__c = &apos;GTS Hungary&apos; 
)</errorConditionFormula>
        <errorMessage>Billed From value on selected Existing Billing Account should correspond to the one set on Order</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Deposit_Required_is_checked</fullName>
        <active>false</active>
        <description>If Deposit Required is checked, Deposit Amount and Deposit Maturity Date can&apos;t be blank.</description>
        <errorConditionFormula>AND((Deposit_Required__c=true),((ISBLANK(Deposit_Amount__c)) || (ISBLANK(Deposit_Maturity_Date__c))))</errorConditionFormula>
        <errorMessage>If Deposit Required is checked, Deposit Amount and Deposit Maturity Date can not be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>It_is_not_possible_to_modify</fullName>
        <active>true</active>
        <errorConditionFormula>AND (  $Profile.Name &lt;&gt;&quot;Intl. Operations Director&quot;,  not(isnull(Request__c)), PRIORVALUE(GTSCommitedDate__c) &lt;&gt;GTSCommitedDate__c,not(isnull( PRIORVALUE( GTSCommitedDate__c))))</errorConditionFormula>
        <errorDisplayField>GTSCommitedDate__c</errorDisplayField>
        <errorMessage>It´s not possible to change GTS commitedDate again after was filled. The permission to do that have just users with INOC Director profile</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Modification_of_Deposits_fields</fullName>
        <active>false</active>
        <description>If Status not equals: &apos;New&apos;, &apos;Budgetary Quotation&apos; or &apos;Firm Quotation&apos;, fields: &apos;Deposit Required&apos;, &apos;Deposit Amount&apos; and &apos;Deposit Maturity Date&apos; are read only.</description>
        <errorConditionFormula>AND(AND( 
NOT( ISPICKVAL(Status__c, &apos;New&apos;)), 
NOT( ISPICKVAL(Status__c, &apos;Budgetary Quotation&apos;)), 
NOT( ISPICKVAL(Status__c, &apos;Firm Quotation&apos;))) 
, 
OR( 
ISCHANGED(Deposit_Required__c), 
ISCHANGED(Deposit_Amount__c), 
ISCHANGED(Deposit_Maturity_Date__c)) 
)</errorConditionFormula>
        <errorMessage>If Status not equals: &apos;New&apos;, &apos;Budgetary Quotation&apos; or &apos;Firm Quotation&apos;, fields: &apos;Deposit Required&apos;, &apos;Deposit Amount&apos; and &apos;Deposit Maturity Date&apos; can not be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Billing_Date_required_on_Close</fullName>
        <active>false</active>
        <description>Checks if Billing Date has been entered before closing</description>
        <errorConditionFormula>AND(ISPICKVAL( Status__c , &apos;Completed&apos;), ISNULL( Start_Billing_Customer__c ), $RecordType.Name = &apos;New Installation&apos;)</errorConditionFormula>
        <errorDisplayField>Start_Billing_Customer__c</errorDisplayField>
        <errorMessage>Start Billing Customer Date is required when closing Order</errorMessage>
    </validationRules>
</CustomObject>